--- a/Ticket/v1.0.md
+++ b/Ticket/v1.0.md
@@ -1,2 +1,3 @@
 Create solution for automatically commit and push with message as content last used ticket file
 Refactoring for Command line
+Creating New format for Tickets, as Version
