New file VERSION.txt to save actual version

--- a/Ticket/v1.0.7.md
+++ b/Ticket/v1.0.7.md
@@ -1,2 +1,3 @@
 Update Documentation and scripts for creating tickets and versions 
 New file VERSION.txt to save actual version 
+Implementation of -publish 
